Updated README.md and updated Home Page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 
 
-<h1>Welcome to my Site!!</h1>
+<h1>Griffith University Car Pool</h1>
+
+<p>Don't like catching buses to Uni and find campus parking too difficult? <br>Then Griffith Car Pool is for you!<br>We'll help you easily find other students to car pool with and make it easy to organise.</p>
+
 <p>Sign up here.</p>
