Added info on the homepage, about us page and contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
 
 
-<h1>About Us</h1>
-<p>We're working on our One Month Rails Project.</p>
+<h1>About Me</h1>
+<p>I'm Andrew Goodman. I'm a student at Griffith University and <a href="#">won $500 from the app idea challenge, for this car pooling idea.<a> I want to make this Griffith Car Pool app to help Uni students to get to uni easier.</p>
+<p>Twitter link, GitHub link, LinkedIn and Blog link or <a href="contact.html">contact me here</a><p>
